Atempt to fix aside spacing

--- a/learnArduino.css
+++ b/learnArduino.css
@@ -4,6 +4,24 @@ body
     background-color: skyblue;
 }
 
+.column0
+{
+    width: 200px;
+    float: left;
+}
+
+.column1
+{
+    width: 500px;
+}
+
+.column2
+{
+    width: 300px;
+    float: right;
+}
+
+
 h1 
 {
     color: 100, 100, 200;
@@ -108,6 +126,7 @@ aside
     background-color: lightblue;
     /*margin: 500px;*/
     width: 300px;
+    margin-left: 50px;
 }
 
 .steps > li
